Actually fix dots width on mobile

--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ body{
 #solution{
     position: fixed;
     top: 200px;
-    width: 300px;
+    width: 330px;
     max-width: 100%;
     left: 50%;
     transform: translateX(-50%);
@@ -409,4 +409,4 @@ body{
     justify-content: center;
     align-content: center;
     flex-direction: column;
-}
+}}
